--- a/Messenger/appsettings.json
+++ b/Messenger/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost,1530;Database=Messenger;User ID=sa;Password=yourStrong(!)Password;"
+  },
   "AllowedHosts": "*"
 }
